combinatorics_25/wandb/run-20250517_132535-d5sdts07/files/output.log
/home/sc.uni-leipzig.de/ci72buri/.conda/envs/math_ml/lib/python3.11/site-packages/gymnasium/envs/registration.py:527: UserWarning: [33mWARN: Using the latest versioned environment `SeqGraphEnv-v0` instead of the unversioned environment `SeqGraphEnv`.[0m
  logger.warn(
Traceback (most recent call last):
  File "/home/sc.uni-leipzig.de/ci72buri/projects/Math_RL/Leipzig_Math_ML_Internship_SS25_RL_Counterexamples/combinatorics_25/train.py", line 79, in <module>
    main()
  File "/home/sc.uni-leipzig.de/ci72buri/projects/Math_RL/Leipzig_Math_ML_Internship_SS25_RL_Counterexamples/combinatorics_25/train.py", line 36, in main
    env = make_vec_env(args.enviroment,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/sc.uni-leipzig.de/ci72buri/.conda/envs/math_ml/lib/python3.11/site-packages/stable_baselines3/common/env_util.py", line 125, in make_vec_env
    vec_env = vec_env_cls([make_env(i + start_index) for i in range(n_envs)], **vec_env_kwargs)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/sc.uni-leipzig.de/ci72buri/.conda/envs/math_ml/lib/python3.11/site-packages/stable_baselines3/common/vec_env/dummy_vec_env.py", line 31, in __init__
    self.envs = [_patch_env(fn()) for fn in env_fns]
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/sc.uni-leipzig.de/ci72buri/.conda/envs/math_ml/lib/python3.11/site-packages/stable_baselines3/common/vec_env/dummy_vec_env.py", line 31, in <listcomp>
    self.envs = [_patch_env(fn()) for fn in env_fns]
                            ^^^^
  File "/home/sc.uni-leipzig.de/ci72buri/.conda/envs/math_ml/lib/python3.11/site-packages/stable_baselines3/common/env_util.py", line 94, in _init
    env = gym.make(env_id, **kwargs)  # type: ignore[arg-type]
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/sc.uni-leipzig.de/ci72buri/.conda/envs/math_ml/lib/python3.11/site-packages/gymnasium/envs/registration.py", line 704, in make
    env_creator = load_env_creator(env_spec.entry_point)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/sc.uni-leipzig.de/ci72buri/.conda/envs/math_ml/lib/python3.11/site-packages/gymnasium/envs/registration.py", line 551, in load_env_creator
    mod = importlib.import_module(mod_name)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/sc.uni-leipzig.de/ci72buri/.conda/envs/math_ml/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/sc.uni-leipzig.de/ci72buri/projects/Math_RL/Leipzig_Math_ML_Internship_SS25_RL_Counterexamples/combinatorics_25/environment/seqGraphEnv.py", line 175
    if reward > 0 && self.node==N:
                   ^
SyntaxError: invalid syntax
